src/scss/main.scss
/* ... */
body {
    //background: linear-gradient(-45deg, #ceb0a7, #b594a0, #79b6cc, #92c9bc);
    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
    background-size: 400% 400%;
    animation: gradient 15s ease infinite;
    height: 1vh;
}
.hero {
    background: linear-gradient(
            180deg,
            rgba(202, 202, 202, 0.5) 0%,
            rgba(0, 212, 255, 0) 100%
    );
}

@media only screen and (min-width: 1050px) {
    .hero {
        height: 90vh;
    }
    .nav-container {
        display: grid;
        grid-template-columns: 66% auto;
        background: unset;

        header {
            background: $main-color;
        }
    }
    header {
        padding: 2em 2em 2em 4em;
    }
    .social-header {
        padding: 2em 4em 2em 0;
    }
    section {
        padding: 4em;
    }

    .social-header {
        display: block;

        ul {
            display: flex;
            justify-content: space-between;
            width: 7em;
            float: right;

            img {
                width: 20px;
                filter: invert(100%);
            }
        }
    }
    .hero {
        display: grid;
        grid-template-columns: 66% auto;
        background: unset;
        background: linear-gradient(
            180deg,
            rgba(202, 202, 202, 0.5) 0%,
            rgba(0, 212, 255, 0) 100%
        );
        padding: 0;

        .content {
            background-size: 400% 400%;

            .content-margin {
                padding: 6em 8em 6em 4em;
            }
            text-align: left;
            h1 {
                font-size: 3em;
                line-height: 1.2em;
            }
        }
    }

    .meet {
        margin: unset;
    }
    .hero-design {
        display: unset;
        margin-left: -50%;
        margin-top: 15%;
        width: 100%;
    }

    .portfolio img {
        float: right;
        max-width: 500px;
    }
}

@media only screen and (max-width: 800px) {
    .content-margin {
        margin: 0 2em 0 2em;
    }
}

@media only screen and (min-width: 1250px) {
    header {
        padding: 2em 2em 2em 10em;
    }
    .social-header {
        padding: 2em 10em 2em 0;
    }
    section {
        padding: 10em 10em 4em 10em;
    }

    .content-margin {
        margin: 0 6em 4em 6em;
    }
}

@media only screen and (min-width: 1550px) {
    header {
        padding: 2em 2em 2em 20em;
    }
    .social-header {
        padding: 2em 20em 2em 0;
    }
    section {
        padding: 6em 20em 4em 20em;
    }

    .content-margin {
        margin: 2em 10em 6em 16em;
    }
    h1 * {
        font-size: 2em;
    }
}

.circle {
    animation: circleAnim 1s infinite alternate-reverse;
}

@keyframes circleAnim {
    from {
        transform: translate(262px, 798px);
        z-index: 5;
    }

    to {
        transform: translate(262px, 830px);
        z-index: 5;
    }
}
.hire-me-background {
    display: flex;
    background: linear-gradient(
        180deg,
        rgba(247, 247, 247, 1) 0%,
        rgba(247, 247, 247, 1) 32%,
        rgba(0, 212, 255, 0) 100%
    );
}
.hire-me-container {
    display: flex;

    @media only screen and (min-width: 800px) {
        margin-top: 9em;
    }
    ul {
        display: flex;
        justify-content: space-between;
        width: 7em;
        float: left;
        img {
            width: 100px;
        }
        // .email {
        //   width: 80px;
        // }
    }
}

.center-helper {
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

.image-radius {
    border-radius: 1em;
}
.no-top-margin {
    margin-top: 0px;
}

.inner {
    background-color: white;
    padding: 1rem;
    border-radius: 5px;
    opacity: 80%;
}
.noBackground {
    background-color: unset;
    padding: unset;
}

.resume {
    font-size: 1.5em;
    margin-top: 10px;
    text-decoration: none;
    font-family: 'Poppins';
    color: #6e00ff;
}
.resume-link {
    a {
        text-decoration: none;
    }
    display: flex;
    margin-left: auto;
    padding: 1em;
    background-color: $main-color;
    color: #00f7ff;
    font-weight: bold;
    border-radius: 30px 0 0 0;
    @media only screen and (min-width: 1050px) {
        display: none;
    }
}
.resume-flex-container {
    display: flex;
    justify-content: flex-end;
}
.resume-link-2 {
    a {
        text-decoration: none;
    }
    display: flex;
    justify-content: flex-end;
    padding: 1em;
    background-color: $main-color;
    color: #00f7ff;
    font-weight: bold;
    border-radius: 0 0 0 30px;
    @media only screen and (max-width: 1050px) {
        display: none;
    }
}
.github-repo-container {
    //display: flex;
    align-items: center;
    //flex-direction: row-reverse;
    img {
        float: left;
        margin-left: 0;
    }
    display: flex;

    @media only screen and (max-width: 800px) {
        justify-content: center;
    }
}

.github-link {
    display: flex;
    align-items: center;
}
.github-repo {
    @media only screen and (max-width: 800px) {
        width: 20px;
    }
    @media only screen and (min-width: 800px) {
        width: 30px;
    }
}
.view-on-github {
    margin-left: 0.4em;
    color: #6700ee;
    @media only screen and (min-width: 800px) {
        font-size: 1em;
    }
    @media only screen and (max-width: 800px) {
        font-size: 0.7em;
    }
    //@media only screen and (min-width: 800px) {
    //  //padding-top: 0.6em;
    //}
    display: inline-block;
    //align-self: flex-end;

    letter-spacing: 0.2em;
    text-shadow: 2px 2px 8px white;
}

.grid-container {
    position: absolute;
    display: grid;
    height: 100%;
    width: 100%;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(6, 1fr);
    // background-color: blue;
    top: 0;
    left: 0;
    z-index: -1;
    overflow: hidden;
    border-radius: 1em;
}
/* ... */

